fix: overflow x

--- a/src/App.css
+++ b/src/App.css
@@ -592,14 +592,10 @@ figure {
     FOOTER
 */
 footer {
-  background: linear-gradient(to bottom, rgba(0, 0, 0, .1) 0%, rgba(0, 0, 0, 0) 5%, rgba(0, 0, 0, 0) 100%);
   background-color: var(--darkgray);
-  width: 100vw;
   margin: 0;
   margin-top: 60px;
   overflow: hidden;
-  /* display: flex;
-  align-items: center; */
 }
 
 footer>div {
